--- a/css/master.css
+++ b/css/master.css
@@ -46,8 +46,31 @@ footer {
     background: #dedede;
 }
 
-#_account {
+#_ipane > *:not(hr) {
     position: relative;
     left:5px;
     top:5px;
+}
+
+.coordinates {
+    background: rgba(0,0,0,0.5);
+    color: #fff;
+    position: absolute;
+    bottom: 30px;
+    left: 10px;
+    padding:5px 10px;
+    margin: 0;
+    font-size: 11px;
+    line-height: 18px;
+    border-radius: 3px;
+    display: none;
+}
+
+.help {
+    cursor: help !important;
+}
+
+.hasErr {
+    border: 1px solid red;
+    color: red;
 }
